--- a/src/css/map.css
+++ b/src/css/map.css
@@ -4,7 +4,15 @@ body {
     border: 0;
 }
 
+.map-bg  {
+    background: fixed;
+}
+
 #map {
     width: 360px;
-    height: 625px;
+    height: 565px;
+}
+
+.left {
+    margin-bottom: 1em;
 }
