--- a/src/css/discover.css
+++ b/src/css/discover.css
@@ -45,6 +45,10 @@ p {
     color: #1D71B8;
 }
 
+a {
+    text-decoration: none;
+}
+
 #pointer {
     padding-left: 12.5%;
     padding-right: 12.5%;
